--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "^28.1.3",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "bootstrap": "^4.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^18.2.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.24",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "redux-devtools": "^3.5.0"
