--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "@types/jest": "^28.1.3",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.6.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^1.0.0-beta.11",
+    "react-bootstrap": "^1.6.5",
     "react-dom": "^18.2.0",
     "react-scripts": "3.0.1",
     "typescript": "^4.7.4"
@@ -37,7 +38,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.24",
-    "react-redux": "^7.1.0",
+    "react-redux": "^7.2.8",
     "redux": "^4.0.4",
     "redux-devtools": "^3.5.0"
   }
