--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
-    "bootstrap": "^4.6.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^1.6.5",
     "react-dom": "^18.2.0",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.7.4"
   },
   "scripts": {
