--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.24",
-    "react-redux": "^7.2.8",
+    "nth-check": "^2.1.1",
+    "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-devtools": "^3.7.0"
   }
