--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.24",
+    "eslint": "^8.18.0",
     "nth-check": "^2.1.1",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
