--- a/package.json
+++ b/package.json
@@ -8,13 +8,10 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
-    "jest-worker": "^28.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
     "sass": "^1.53.0",
-    "typescript": "^4.7.4",
-    "webpack": "^5.73.0"
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,8 +36,6 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.24",
-    "eslint": "^8.18.0",
-    "nth-check": "^2.1.1",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-devtools": "^3.7.0"
