--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/react-redux": "^7.1.24",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-devtools": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
@@ -37,11 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-redux": "^7.1.24",
-    "react-redux": "^8.0.2",
-    "redux": "^4.2.0",
-    "redux-devtools": "^3.7.0"
   }
 }
